# ChangeLog for dev-php/PEAR-Archive_Tar
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.70 2015/04/29 09:08:15 ago Exp $

  29 Apr 2015; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.15.ebuild:
  Stable for alpha/amd64/arm/ia64/ppc64/sparc, wrt bug #547746

  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> PEAR-Archive_Tar-1.3.15.ebuild:
  ppc stable wrt bug #547746

  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> PEAR-Archive_Tar-1.3.15.ebuild:
  x86 stable wrt bug #547746

  26 Apr 2015; Jeroen Roovers <jer@gentoo.org> PEAR-Archive_Tar-1.3.15.ebuild:
  Stable for HPPA (bug #547746).

*PEAR-Archive_Tar-1.3.15 (23 Mar 2015)

  23 Mar 2015; Brian Evans <grknight@gentoo.org>
  +PEAR-Archive_Tar-1.3.15.ebuild:
  Version bump

  16 Feb 2015; Brian Evans <grknight@gentoo.org> PEAR-Archive_Tar-1.3.13.ebuild:
  Add missing RDEPEND for bug 447180

*PEAR-Archive_Tar-1.3.13 (14 Jan 2015)

  14 Jan 2015; Brian Evans <grknight@gentoo.org>
  +PEAR-Archive_Tar-1.3.13.ebuild, -PEAR-Archive_Tar-1.3.9.ebuild:
  Version bump; drop old

  02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for alpha, wrt bug #517944

  29 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for sparc, wrt bug #517944

  28 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for ia64, wrt bug #517944

  27 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for ppc64, wrt bug #517944

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for ppc, wrt bug #517944

  12 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for x86, wrt bug #517944

  10 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for amd64, wrt bug #517944
