@@ -1,12 +1,0 @@
-DEFINED_PHASES=install
-DEPEND=|| ( <dev-lang/php-5.3[pcre] >=dev-lang/php-5.3 ) >=dev-php/PEAR-PEAR-1.8.1
-DESCRIPTION=Tar file management class
-EAPI=4
-HOMEPAGE=http://pear.php.net/package/Archive_Tar
-KEYWORDS=alpha amd64 arm hppa ia64 ppc ppc64 ~s390 ~sh sparc x86
-LICENSE=BSD
-PDEPEND=dev-php/pear
-RDEPEND=|| ( <dev-lang/php-5.3[pcre] >=dev-lang/php-5.3 ) >=dev-php/PEAR-PEAR-1.8.1
-SLOT=0
-SRC_URI=http://pear.php.net/get/Archive_Tar-1.3.11.tgz
-_md5_=b2acf9842aed17877c610caca129fffb
