@@ -1,12 +1,0 @@
-DEFINED_PHASES=install
-DEPEND=|| ( <dev-lang/php-5.3[pcre] >=dev-lang/php-5.3 ) >=dev-php/PEAR-PEAR-1.8.1
-DESCRIPTION=XML utility class
-EAPI=2
-HOMEPAGE=http://pear.php.net/package/XML_Util
-KEYWORDS=alpha amd64 arm hppa ia64 ppc ppc64 ~s390 ~sh sparc x86
-LICENSE=PHP-2.02
-PDEPEND=dev-php/pear
-RDEPEND=|| ( <dev-lang/php-5.3[pcre] >=dev-lang/php-5.3 ) >=dev-php/PEAR-PEAR-1.8.1
-SLOT=0
-SRC_URI=http://pear.php.net/get/XML_Util-1.2.1.tgz
-_md5_=3cf7f4f297a2402cfaceedab316c8fc5
