@@ -1,12 +1,0 @@
-DEFINED_PHASES=install setup
-DEPEND=>=dev-lang/php-5.2.4 >=dev-php/pear-1.4.1 dev-lang/php >=dev-php/pear-1.8.1
-DESCRIPTION=The Symfony YAML Component
-EAPI=4
-HOMEPAGE=http://pear.symfony-project.com
-KEYWORDS=amd64 hppa x86
-LICENSE=MIT
-RDEPEND=>=dev-lang/php-5.2.4 >=dev-php/pear-1.4.1 dev-lang/php >=dev-php/pear-1.8.1
-SLOT=0
-SRC_URI=http://pear.symfony-project.com//get/YAML-1.0.6.tgz
-_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	php-pear-r1	6199074ba0005674c2291a5a8d0274e2	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=618806dafeb56446d3683f5822ceeec4
