@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-Archive_Tar
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.70 2015/04/29 09:08:15 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.71 2015/04/29 12:42:51 grknight Exp $
+
+  29 Apr 2015; Brian Evans <grknight@gentoo.org>
+  -PEAR-Archive_Tar-1.3.11.ebuild, -PEAR-Archive_Tar-1.3.13.ebuild:
+  Drop old
 
   29 Apr 2015; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.15.ebuild:
   Stable for alpha/amd64/arm/ia64/ppc64/sparc, wrt bug #547746
